align to RESTful
